--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="card.css">
-  <title>Document</title>
+  <link rel="icon" href="https://www.bkash.com/images/favicon.png">
+  <title>Bkash Payment</title>
 </head>
 
 <body>
